# swift-numerics

./: Package.swift
Sources/: CMakeLists.txt
Sources/Complex/: Norms.md
Sources/ComplexModule/: Complex.swift  Norms.md  Norms.swift  Polar.swift  README.md  SplitComplex.swift
Sources/FormattersModule/: FloatFormatting.swift
Sources/IntegerModule/: ArithmeticCore.swift  CMakeLists.txt  README.md  Rotate.swift  UInt128.swift  UInt256.swift
Sources/Numerics/: Numerics.swift
Sources/Operators/: Operators.swift
Sources/StaticArray/: StaticArray.swift
Sources/_NumericsShims/include/: _NumericsShims.h
Sources/_StaticBuffer/: CMakeLists.txt  StaticBuffer.swift
Tests/ComplexTests/: ApproximateEqualityTests.swift  ArithmeticTests.swift
Tests/IntegerTests/: ArithmeticCoreTests.swift
Tests/OperatorTests/: OperatorTests.swift
Tests/RealTests/: ApproximateEqualityTests.swift
Tests/StaticArrayTests/: StaticArrayTests.swift
